# fastapi-test-project

./: docker-compose.yaml  dockerfile  pyproject.toml  readme.md
apps/: __init__.py
apps/author/: models.py  schemas.py  views.py
apps/book/: models.py  schemas.py  views.py
main/: config.py  db.py  main.py
migrations/: env.py
migrations/versions/: 0d7bac5ade67_add_tutorial_mode.py  1df362fde950_initial.py  2c5e74e7ea47_added_books_model.py  608d4a192ac5_added_books_model.py
