[tool.poetry]
name = "fastapi-preview"
version = "0.1.0"
description = "just tehnology stack preview"
authors = ["Nikita Pozdnyakov <n.pozdnyakov@spider.ru>"]
readme = "README.md"
packages = [{include = "fastapi_preview"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
typer = "^0.9.0"
asyncpg = "^0.27.0"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
